// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chat window renders a chat window with messages 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯

[32m[Mr. Test]: [37mHello, world![39m[32m[39m
[31mError[39m

[33mSystem message[39m


"
`;

exports[`Chat window renders an empty chat window 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯







"
`;
